--- a/Stackoverflow_Divya.ipynb
+++ b/Stackoverflow_Divya.ipynb
@@ -20,17 +20,12 @@
     }
    },
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load in\n",
+
     "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
     "\n",
-    "# Input data files are available in the \"../input/\" directory.\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list the files in the input directory\n",
     "\n",
-    "# Plotting Libs\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "# magic function\n",
